# turboshell

./: .gitignore  Cargo.toml  Makefile  README  build.rs
doc/: README  formats.txt
src/: error.rs  lib.rs  main.rs  resolve.rs  runlist.rs  seedfile.rs  unpack.rs
src/commands/: compile.rs  inspect.rs  keytool.rs  mod.rs  run.rs
tests/: simple_roundtrip.rs
tests/resources/package_unit_tests/broken_toml/: package.toml
tests/resources/package_unit_tests/dependencies_isnt_a_table/: package.toml
tests/resources/package_unit_tests/dependencies_isnt_an_array/: package.toml
tests/resources/package_unit_tests/dependencies_isnt_an_array_of_strings/: package.toml
tests/resources/package_unit_tests/dependency_version_isnt_a_string/: package.toml
tests/resources/package_unit_tests/dependency_version_isnt_local/: package.toml
tests/resources/package_unit_tests/env_isnt_a_table/: package.toml
tests/resources/package_unit_tests/env_values_arent_strings/: package.toml
tests/resources/package_unit_tests/invalid_utf8/: package.toml
tests/resources/package_unit_tests/main_doesnt_exist/: package.toml
tests/resources/package_unit_tests/main_isnt_a_string/: package.toml
tests/resources/package_unit_tests/main_isnt_executable/: package.toml
tests/resources/package_unit_tests/main_specified/: package.toml
tests/resources/package_unit_tests/name_doesnt_match_directory/: package.toml
tests/resources/package_unit_tests/name_is_missing/: package.toml
tests/resources/package_unit_tests/name_isnt_a_string/: package.toml
(+30 files in other folders)
