[package]
name = "turboshell"
version = "0.1.0"
build = "build.rs"

[dependencies]
byteorder = "0.5"
cast = "0.1"
crc = "1.2"
docopt = "0.6"
flate2 = "0.2"
itertools = "0.4"
libc = "0.2"
rustc-serialize = "0.3"
sodiumoxide = "0.0"
tar = "0.4"
tempdir = "0.3"
toml = "0.1"
walkdir = "0.1"

[build-dependencies]
chrono = "0.2"
